removed about section

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -41,7 +41,7 @@ hr.star-light {
 
 hr.star-light:after {
   color: #9bf7f7;
-  background-color: #e2b9e8 ;
+  background-color: white;
 }
 
 hr.star-dark {
